# ks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
crates/ks/: Cargo.toml
crates/ks-cli/: Cargo.toml
crates/ks-cli/src/: audit.rs  cli.rs  clip.rs  clipboard.rs  exit.rs  hardening.rs  main.rs  output.rs  prompt.rs  terminal.rs
crates/ks-cli/src/cmd/: del.rs  env.rs  find.rs  generate.rs  get.rs  info.rs  init.rs  io.rs  list.rs  lock.rs  mod.rs  passwd.rs  set.rs
crates/ks-cli/src/commands/: cp.rs  doctor.rs  edit.rs  env_.rs  find.rs  generate.rs  get.rs  git.rs  grep.rs  identity.rs  identity_.rs  info.rs  init.rs  inject.rs  insert.rs  lock.rs  ls.rs  mod.rs  mv.rs  otp.rs  passwd.rs  pwgen.rs  recipients.rs  rm.rs  run.rs  set.rs  show.rs  unlock.rs
crates/ks-cli/tests/: json.rs
crates/ks/src/: agent.rs  config.rs  crypto.rs  envelope.rs  error.rs  gen.rs  generate.rs  git.rs  identity.rs  lib.rs  path.rs  pwgen.rs  recipient.rs  secret.rs  session.rs  store.rs  totp.rs  vault.rs
skills/ks/: SKILL.md
