[package]
name = "ks-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Key Store CLI"
keywords = ["key", "store", "cli", "secrets"]
categories = ["command-line-utilities"]

[[bin]]
name = "ks"
path = "src/main.rs"

[dependencies]
ks.workspace         = true
clap.workspace       = true
cliclack.workspace   = true
owo-colors.workspace = true
arboard.workspace    = true
zeroize.workspace    = true
secrecy.workspace    = true
serde_json.workspace = true
base64.workspace     = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true
