[package]
name = "ks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ks"

[dependencies]
age.workspace         = true
directories.workspace = true
zeroize.workspace     = true
thiserror.workspace   = true
rand.workspace        = true
totp-rs.workspace     = true

[lints]
workspace = true
